# simcc

./: CMakeLists.txt  README.md
doc/: professional c++.md
simcc/pattern/: README.md
test/: CMakeLists.txt  README.md  any_test.cc  crc_test.cc  data_stream_test.cc  decorator_pattern_coffee_store_test.cc  dgram_filter_test.cc  double_buffering_test.cc  file_util_test.cc  http_multi_data_parser_test.cc  inherited_conf_json_test.cc  ini_parser_test.cc  json2_test.cc  json_merge_test.cc  json_test.cc  lru_test.cc  md5_test.cc  proxy_pattern_test.cc  qh_palloc_test.cc  ref_object_test.cc  string_util_test.cc  test_01.cc  test_common.h  time_test.cc  tokent_test.cc  trivial_test.cc
test/test_decorator_pattern/: CMakeLists.txt  coffee_store.cc
test/test_proxy_pattern/: CMakeLists.txt  pattern_proxy.cc
vsprojects/: libsimcc-test.vcxproj  libsimcc-test.vcxproj.filters  libsimcc.sln  libsimcc.vcxproj  libsimcc.vcxproj.filters
